--- a/semaphores/makefile
+++ b/semaphores/makefile
@@ -1,19 +1,20 @@
 CC=gcc
 CFLAGS=-g -Wall
+LDFLAGS=-lpthread
 OBJS=shared_memory.o
 EXE=writeshmem.exe readshmem.exe destroy_shmem.exe
 
 all: $(EXE)
 
 %.exe: %.o $(OBJS)
-	$(CC) $(CFLAGS) $< $(OBJS) -o $@
+	$(CC) $(CFLAGS) $< $(OBJS) $(LDFLAGS) -o $@
 
 
 %.o: %.c %.h
-	$(CC) $(CFLAGS) -c $< -o $@
+	$(CC) $(CFLAGS) -c $< $(LDFLAGS) -o $@
 
 %.o: %.c
-	$(CC) $(CFLAGS) -c $< -o $@
+	$(CC) $(CFLAGS) -c $< $(LDFLAGS) -o $@
 
 clean:
 	rm -f $(EXE) *.o
